<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/title_auth"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/signupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="name"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:textColor="@color/input_text"
        android:textColorHint="@color/input_hint" />

    <EditText
        android:id="@+id/signupUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="username"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:textColor="@color/input_text"
        android:textColorHint="@color/input_hint" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxWidth="488dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/input_text"
            android:textColorHint="@color/input_hint" />
    </LinearLayout>

    <Spinner
        android:id="@+id/roleSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:maxWidth="320dp"
        android:minWidth="200dp"
        android:text="@string/signup_button"
        android:textColor="@color/app_background" />

    <TextView
        android:id="@+id/goLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate_to_login"
        android:textColor="@color/link" />

</LinearLayout>